# moex_connector

./: ppyproject.toml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: generate_coverage_badge.yml  run_code_tests.yml
moex/: __init__.py  connector.py
tests/: test_endpoints.py
